--- a/Desafio 5 - HandleBars/PUG/views/producto.pug
+++ b/Desafio 5 - HandleBars/PUG/views/producto.pug
@@ -1,9 +1,35 @@
+- var prod = `${productos.length != 0}`
 html 
   head
     title Detalles producto
     include ../partials/menu
+    style
+      include ./styles.css
+      link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u")
+      link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp")
+      link(rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css")
+      link(rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa")
+
   body
-    h3=`Nombre: ${product.name}`
-    p=`Id: ${product.id}`
-    p=`Descripción: ${product.description}`
-    img(src=`${product.image}`,alt='',width=100,height=100 )
+      table(class='u-full-width')
+          thead
+            tr
+              th="Id"
+              th="Title"
+              th="Price"
+              th="Thumbnail"
+            if productos
+            each val in productos
+              tr 
+                td
+                  p=`${val.id}`
+                td
+                  h3=` ${val.producto.title}`
+                td
+                  p=` ${val.producto.price}`
+                td
+                  img(src=`${val.producto.thumbnail}`,alt='',width=100,height=100 )
+            else 
+              tr
+                td
+                  p(class="mensaje")="No hay productos"
