--- a/Desafio 5 - HandleBars/PUG/views/styles.css
+++ b/Desafio 5 - HandleBars/PUG/views/styles.css
@@ -4,17 +4,23 @@ input{
   width: 25rem;
 }
 form{width:50%}
-.imagen{width:10%}
+.imagen{width:5%}
 table{
   margin: 20px;
   
 }
-button{
+.listaBtn{
+  display:flex;
+  list-style-type: none;
+  margin:20px;
+}
+.buttons{
   margin: 15px;
-
+  border:none;
+  outline:0;
+  padding: 5px;
+}
+form{
+  margin:30px;
 }
 
-/* <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" crossorigin="anonymous">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> */
