--- a/Desafio 5 - HandleBars/HBS/views/productos.hbs
+++ b/Desafio 5 - HandleBars/HBS/views/productos.hbs
@@ -8,16 +8,20 @@
       <th>Thumbnail</th>
     </tr>
   </thead>
-  {{#each productos}}
   <tbody>
+  {{#if lengthProd}}
+  {{#each productos}}
   <tr>
     <td><p>{{this.id}}</p></td>
     <td> <p> {{this.producto.title}}</p></td>
     <td> <p>{{this.producto.price}}</p></td>
     <td><img class="imagen" src="{{this.producto.thumbnail}}"></td>
+  {{/each}}
+  {{else}}
+    <td><p>No hay productos</p></td>
+   {{/if}}
   </tr>
   </tbody>
-  {{/each}}
 </table>
 <style>
 .imagen{width:10%}
