--- a/Desafio 6 - Websockets/EJS/views/pages/formulario.ejs
+++ b/Desafio 6 - Websockets/EJS/views/pages/formulario.ejs
@@ -1,20 +1,20 @@
 <%- include('../partials/header') %>
 <%- include('../partials/buttons') %>
 <body>
-  <form  action="/productos" method="POST">
+  <form class="formStyle"  action="/productos" method="POST">
     <input class="form-control"  type="text" name="title" placeholder="Title">
     <input class="form-control" type="number" step="0.01" name="price" placeholder="Price">
     <input class="form-control" type="text" name="thumbnail" placeholder="Thumbnail">
     <button id="formulario" class="btn-block" type="submit ">Añadir Producto</button>
   </form>
   <div >
-    <table class="u-full-width">
+    <table class="u-full-width table table-dark">
       <thead>
         <tr>
-          <th>Id</th>
-          <th>Title</th>
-          <th>Price</th>
-          <th>Thumbnail</th>
+          <th scope="col">Id</th>
+          <th scope="col">Title</th>
+          <th scope="col">Price</th>
+          <th scope="col">Thumbnail</th>
         </tr>
       </thead>
       <tbody id="prodTable">
@@ -25,11 +25,9 @@
     </table>
   </div>
   <h1>Chat</h1>
-    <fieldset>
-      <label for="user">E-Mail</label>
-      <input type="text" name="user" id="user">
-      <label for="message">Mensaje</label>
-      <input type="text" name="message" id="message">
+    <fieldset class="chat">
+      <input placeholder="E-mail" class="form-control" type="text" name="user" id="user">
+      <input placeholder="Mensaje" class="form-control" type="text" name="message" id="message">
       <button id='send'>Enviar</button>
     </fieldset>
     <fieldset>
@@ -46,22 +44,25 @@
   })
 
   socket.on('prodChangeBack',(data) =>{
-    console.log('hola2');
     let contenido=''
     fetch('/producto')
     .then(response => response.json())
     .then(data => {
-      
+      if(data.length!=0){
       data.map(item=>{
+        console.log('ad');
         contenido +=`
           <tr>
-            <td><p>${item.id}</p></td>
-            <td> <p>${item.producto.title} </p></td>
-            <td> <p>${item.producto.price} </p></td>
-            <td><img class="imagen" src="${item.producto.thumbnail} "></td>
+            <td scope="row"><p>${item.id}</p></td>
+            <td scope="row"> <p>${item.producto.title} </p></td>
+            <td scope="row"> <p>${item.producto.price} </p></td>
+            <td scope="row"><img class="imagen" src="${item.producto.thumbnail} "></td>
           <tr>
           `
-      })
+        })
+      }else{
+        contenido=`<td><p>No hay productos </p></td>`
+      }
       document.getElementById("prodTable").innerHTML=contenido 
   })
 
@@ -71,10 +72,7 @@
   const send = document.getElementById("send").addEventListener('click',()=>{
     socket.emit('messageFront', {'user':user.value,'message':message.value})
   })
- 
 
- 
-  
   socket.on('messageBackend',(data)=>{
     data = JSON.parse(data)
     let inner=''
@@ -113,5 +111,14 @@
   table{
     margin: 20px;
     
+}
+.formStyle{
+  width: 40%;
+}
+.chat{
+  width: 40%;
+}
+.table{
+  width:80%;
 }
 </style>
