--- a/Desafio 6 - Websockets/EJS/views/pages/formulario.ejs
+++ b/Desafio 6 - Websockets/EJS/views/pages/formulario.ejs
@@ -1,10 +1,10 @@
 <%- include('../partials/header') %>
 <%- include('../partials/buttons') %>
 <body>
-  <form class="formStyle"  action="/productos" method="POST">
-    <input class="form-control"  type="text" name="title" placeholder="Title">
-    <input class="form-control" type="number" step="0.01" name="price" placeholder="Price">
-    <input class="form-control" type="text" name="thumbnail" placeholder="Thumbnail">
+  <form class="formStyle"  >
+    <input class="form-control" id="title"  type="text" name="title" placeholder="Title">
+    <input class="form-control" id="price" type="number" step="0.01" name="price" placeholder="Price">
+    <input class="form-control" id="thumbnail" type="text" name="thumbnail" placeholder="Thumbnail">
     <button id="formulario" class="btn-block" type="submit ">Añadir Producto</button>
   </form>
   <div >
@@ -38,19 +38,22 @@
 </body>
 <script>
   const socket = io()
+
+  const title = document.getElementById("title")
+  const price = document.getElementById("price")
+  const thumbnail = document.getElementById("thumbnail")
   
   document.getElementById("formulario").addEventListener('click',()=>{
-    socket.emit('prodChange', true)
+    socket.emit('prodChange', {'title':title.value,'price':price.value,'thumbnail':thumbnail.value})
   })
 
-  socket.on('prodChangeBack',(data) =>{
+  socket.on('prodChangeBack',async (data) =>{
     let contenido=''
-    fetch('/producto')
+    await fetch('/producto')
     .then(response => response.json())
     .then(data => {
       if(data.length!=0){
       data.map(item=>{
-        console.log('ad');
         contenido +=`
           <tr>
             <td scope="row"><p>${item.id}</p></td>
