--- a/Desafio 8 - SQL and Node/EJS/views/pages/formulario.ejs
+++ b/Desafio 8 - SQL and Node/EJS/views/pages/formulario.ejs
@@ -57,9 +57,9 @@
         contenido +=`
           <tr>
             <td scope="row"><p>${item.id}</p></td>
-            <td scope="row"> <p>${item.producto.title} </p></td>
-            <td scope="row"> <p>${item.producto.price} </p></td>
-            <td scope="row"><img class="imagen" src="${item.producto.thumbnail} "></td>
+            <td scope="row"> <p>${item.title} </p></td>
+            <td scope="row"> <p>${item.price} </p></td>
+            <td scope="row"><img class="imagen" src="${item.thumbnail} "></td>
           <tr>
           `
         })
