--- a/Proyecto Final 1°/frontend/src/components/ListOfProducts/ProductEdit.module.css
+++ b/Proyecto Final 1°/frontend/src/components/ListOfProducts/ProductEdit.module.css
@@ -1,18 +1,10 @@
-img {
- width: 60%;
-  height: auto;
-}
-.tdImg{
-  height: 150px;
-  width: 150px;
-}
-.producto  {
-  display: flex;
-}
 .button{
   color: white;
+  
 }
-
+.editModal{
+  margin:20px;
+}
 
 
 .actions button {
