--- a/Proyecto Final 1°/frontend/src/components/ListOfProducts/ProductAdd.module.css
+++ b/Proyecto Final 1°/frontend/src/components/ListOfProducts/ProductAdd.module.css
@@ -1,23 +1,11 @@
-.cart-items {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  max-height: 20rem;
-  overflow: auto;
+.button{
+  color: white;
+  
+}
+.editModal{
+  margin:20px;
 }
 
-.total {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: bold;
-  font-size: 1.5rem;
-  margin: 1rem 0;
-}
-
-.actions {
-  text-align: right;
-}
 
 .actions button {
   font: inherit;
