--- a/Proyecto Final 1°/frontend/src/components/UI/Input.module.css
+++ b/Proyecto Final 1°/frontend/src/components/UI/Input.module.css
@@ -7,10 +7,12 @@
 .input label {
   font-weight: bold;
   margin-right: 1rem;
+  width: 15rem;
 }
 
 .input input {
-  width: 3rem;
+  margin: 0 ;
+  width: 30rem;
   border-radius: 5px;
   border: 1px solid #ccc;
   font: inherit;
