--- a/Desafio 12 - Login por formulario/frontend/src/App.css
+++ b/Desafio 12 - Login por formulario/frontend/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction:column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin: auto 20vh;
 }
 .cart{
   color: white;
@@ -32,14 +32,13 @@
   color: #61dafb;
 }
 .headerName{
-  display: flex;
-  justify-content: flex-start;
+  margin-left: 50%;
 }
 .nombre{
-  justify-content: space-around;
+  display: inline-block;
 }
 .deslogueo{
-  justify-content:center;
+  margin-left: 50px;
 }
 @keyframes App-logo-spin {
   from {
