cambios proy final

--- a/backend/views/main.hbs
+++ b/backend/views/main.hbs
@@ -14,20 +14,10 @@
 </head>
 <body>
   
-  <h1>Chat</h1>
-    <fieldset class="chat">
-      <input placeholder="E-mail" class="form-control" type="text" name="user" id="user">
-      <input placeholder="Mensaje" class="form-control" type="text" name="message" id="message">
-      <button id='send'>Enviar</button>
-    </fieldset>
-    <fieldset>
-      <ul id='messages'>
+  <h1>Server Coderhouse Backend</h1>
 
-      </ul>
-    </fieldset>
 </body>
 <script>
-  console.log("sadadas")
   const socket = io()
   
   const message = document.getElementById("message")
